--- a/public/css/user/user.scss
+++ b/public/css/user/user.scss
@@ -37,6 +37,37 @@ body {
   }
 }
 
+.personelInfoBox {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  background-color: white;
+  width: 100%;
+  border: 1px solid black;
+  border-radius: 5px;
+  h4 {
+    font-size: 20px;
+  }
+  p {
+    font-size: 17px;
+  }
+  .personelContainer {
+    display: flex;
+    flex: 1;
+    flex-direction: row;
+    .iconContainer {
+      font-size: 30px;
+      flex: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .infoContainer {
+      flex: 3;
+    }
+  }
+}
+
 .profileNameBox {
   background-color: white;
   border: 1px solid black;
@@ -205,6 +236,9 @@ body {
 @media screen and (min-width: 768px) {
   .user_info {
     .profileImageBox {
+      width: 75%;
+    }
+    .personelInfoBox {
       width: 75%;
     }
   }
