no longer double escaping message previews, password forgotten works

--- a/app/views/password_recoveries/new.html.erb
+++ b/app/views/password_recoveries/new.html.erb
@@ -14,7 +14,7 @@
             <input type="text" class="form-control" id="email" name="email" />
           </div>
         </form>
-        <button type="button" class="btn center-block" id="submitEmail">Recover Password</button>
+        <button type="" class="btn center-block" id="submitEmail">Recover Password</button>
       </div>
     </div>
   </div>
