--- a/app/views/password_recovery_mailer/set_new_password_email.html.erb
+++ b/app/views/password_recovery_mailer/set_new_password_email.html.erb
@@ -1,4 +1,4 @@
 <h2> Dear <%= @password_recovery.user.first_name %>,</h2>
-<p>Click <%= link_to 'here', "http://localhost:3000/password_recoveries/#{@password_recovery.token}/edit" %> to reset your Salt Password</p>
+<p>Click <%= link_to 'here', "https://infinite-cove-48463.herokuapp.com/password_recoveries/#{@password_recovery.token}/edit" %> to reset your Salt Password</p>
 <p>Meet Someone Different!</p>
 <p>The Salt Staff</p>
