--- a/public/css/welcome/index.scss
+++ b/public/css/welcome/index.scss
@@ -11,6 +11,12 @@ header {
 .navMobileSearchIcon {
   display: none !important;
 }
+.navDropdownMenuItems {
+  background-color: transparent !important;
+}
+.navBarMobile {
+  display: none !important;
+}
 .jumbotron {
   background-image: url('../../assets/food.jpg');
   background-position: center;
