--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
     <header>
       <div class="container-fluid">
         <div class="row">
-          <div class="col-xs-6 col-sm-8">
+          <div class="col-xs-5 col-sm-8">
             <div class="header_img">
               <a href="/"><img src="/assets/whitesalticon.png" alt="salt"></a>
             </div>
@@ -55,7 +55,7 @@
                   </form>
                 </div>
               </div>
-              <div class="navMobileSearchIcon visible-xs hidden-sm ">
+              <div class="navMobileSearchIcon visible-xs hidden-sm">
                 <a href="#" id="hiddenNavAnchor"><i class="fa fa-search" id="searchGlass" aria-hidden="true"></i></a>
               </div>
               <div class="visible-xs hidden-sm navBarMobile">
@@ -89,12 +89,12 @@
                 </div>
               </div>
               <% if current_user %>
-              <div class="col-xs-6 col-sm-4" id="profile-box" data-id=<%= current_user.id %>>
+              <div class="col-xs-7 col-sm-4" id="profile-box" data-id=<%= current_user.id %>>
                 <div class="header_links">
                   <nav class="nav_effect">
                 <%= link_to "Logout", logout_path, method: 'delete' %>
               <% else %>
-              <div class="col-xs-6 col-sm-4" id="profile-box" data-id="none">
+              <div class="col-xs-7 col-sm-4" id="profile-box" data-id="none">
                 <div class="header_links">
                   <nav class="nav_effect">
                     <a href="#" data-toggle="modal" data-target="#sign_up">Sign Up</a>
@@ -102,13 +102,26 @@
               <% end %>
                   </nav>
                   <div class="header_profile" >
-                    <a href="/current_user/dashboard" alt="Profile Image">
+                    <div id="navDropdown" >
+                    <% if current_user %>
+                    <a href="#" alt="Profile Image">
+                    <% else %>
+                    <a href="#" alt="Profile Image" data-toggle="tooltip" data-placement="bottom" title="Must Be Logged In">
+                    <% end %>
                        <% if current_user&.images&.first  %>
                         <%= image_tag(attachment_url(current_user.images.first, :file, :fill, 300, 300), :class => "img-circle header_profile_image")%>
                       <% else %>
                        <%= image_tag('http://unstats.un.org/unsd/trade/events/2015/abudhabi/img/no-pic.png', :class => "img-circle header_profile_image") %>
                       <% end %>
                     </a>
+                    </div>
+                    <div id="navDropdownMenu" class="menu" style="display:none">
+                      <ul class="navDropdownMenuItems">
+                        <a href="/current_user/dashboard"><li>Profile</li></a>
+                        <a href="#"><li>Host</li></a>
+                        <a href="#"><li>Inbox</li></a>
+                      </ul>
+                    </div>
                   </div>
                 </div>
               </div>
