--- a/public/css/events/index.css
+++ b/public/css/events/index.css
@@ -70,6 +70,7 @@ body {
   background-color: rgba(255, 255, 255, 0.7);
   display: inline-block;
   padding: 5px;
+  border-bottom-right-radius: 10px;
 }
 
 .eventContainer .imgContainer .dateContainer .date {
@@ -78,19 +79,6 @@ body {
 
 .eventContainer .imgContainer .dateContainer .time {
   font-size: 16px;
-}
-
-.eventContainer .imgContainer .watchIcon {
-  position: absolute;
-  top: 7px;
-  right: 25px;
-  font-size: 30px;
-  color: white;
-  transition: 0.3s;
-}
-
-.eventContainer .imgContainer .watchIcon:hover, .eventContainer .imgContainer .watchIcon:focus {
-  color: pink;
 }
 
 .eventContainer .descContainer {
@@ -134,10 +122,12 @@ body {
 
 .eventContainer .descContainer .eventDescContainer {
   flex: 3;
+  padding: 10px;
 }
 
 .eventContainer .descContainer .eventDescContainer .event_title {
-  margin: 10px 0;
+  margin: 0;
+  margin-top: 5px;
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
@@ -146,11 +136,19 @@ body {
 
 .eventContainer .descContainer .eventDescContainer .event_guests {
   display: inline-block;
+  margin: 0;
+  margin-top: 5px;
 }
 
 .eventContainer .descContainer .eventDescContainer .event_spots_left {
   display: inline-block;
-  margin-left: 5px;
+  margin: 0;
+}
+
+@media screen and (min-width: 425px) {
+  .eventContainer .descContainer .eventDescContainer .event_spots_left {
+    margin-left: 15px;
+  }
 }
 
 @media screen and (min-width: 500px) {
