--- a/public/css/events/index.scss
+++ b/public/css/events/index.scss
@@ -59,6 +59,7 @@ body {
       background-color: rgba(255, 255, 255, 0.7);
       display: inline-block;
       padding: 5px;
+      border-bottom-right-radius: 10px;
       .date {
         font-size: 20px;
       }
@@ -66,21 +67,10 @@ body {
         font-size: 16px;
       }
     }
-    .watchIcon {
-      position: absolute;
-      top: 7px;
-      right: 25px;
-      font-size: 30px;
-      color: white;
-      transition: 0.3s;
-    }
-    .watchIcon:hover, .watchIcon:focus {
-      color: pink;
-    }
   }
   .descContainer {
     border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
+    border-bottom-right-radius: 10px;
     flex: 1;
     display: flex;
     flex-direction: row;
@@ -112,8 +102,10 @@ body {
     }
     .eventDescContainer {
       flex: 3;
+      padding: 10px;
       .event_title {
-        margin: 10px 0;
+        margin: 0;
+        margin-top: 5px;
         white-space: nowrap;
         text-overflow: ellipsis;
         overflow: hidden;
@@ -121,10 +113,23 @@ body {
       }
       .event_guests {
         display: inline-block;
+        margin: 0;
+        margin-top: 5px;
       }
       .event_spots_left {
         display: inline-block;
-        margin-left: 5px;
+        margin: 0;
+      }
+    }
+  }
+}
+@media screen and (min-width: 425px) {
+  .eventContainer {
+    .descContainer {
+      .eventDescContainer {
+        .event_spots_left {
+          margin-left: 15px;
+        }
       }
     }
   }
