--- a/public/css/header.scss
+++ b/public/css/header.scss
@@ -23,7 +23,34 @@ a {
 a:hover, a:focus {
   text-decoration: none;
 }
-
+#navDropdownMenu {
+  position: absolute;
+  width: 80px;
+  right: 6px;
+}
+.navDropdownMenuItems {
+  list-style: none;
+  position: relative;
+  z-index: 20;
+  margin: 0;
+  text-align: center;
+  padding: 10px 5px;
+  background-color: black;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  a {
+    transition: 0.3s;
+    color: white;
+  	text-shadow: 1px 1px 1px black;
+    cursor: pointer;
+    li {
+      margin-top: 3px;
+    }
+  }
+  a:hover, a:focus, a:active {
+    color: pink;
+  }
+}
 nav a {
 	position: relative;
 	display: inline-block;
@@ -274,6 +301,7 @@ header {
     margin: 0px 8px 5px 10px;
   }
 }
+
 @media screen and (min-width: 768px) {
   nav a {
   	margin: 18px 8px;
@@ -288,6 +316,10 @@ header {
       width: 120px;
       margin-top: 10px;
     }
+  }
+  #navDropdownMenu {
+    position: absolute;
+    width: 100px;
   }
   .header_profile {
     display: inline-block;
