fixing bugs and styles

--- a/public/css/dashboard/dashboard.css
+++ b/public/css/dashboard/dashboard.css
@@ -210,6 +210,10 @@ td {
   vertical-align: middle !important;
 }
 
+.nav.nav-pills {
+  margin-top: 10px;
+}
+
 .nav.nav-pills a {
   cursor: pointer;
   color: black;
