--- a/public/css/dashboard/dashboard.scss
+++ b/public/css/dashboard/dashboard.scss
@@ -182,6 +182,7 @@ td {
   vertical-align: middle !important;
 }
 .nav.nav-pills {
+  margin-top: 10px;
   a {
     cursor: pointer;
     color: black;
