--- a/public/css/events/show.css
+++ b/public/css/events/show.css
@@ -6,10 +6,6 @@ body {
   margin-top: 40px;
 }
 
-#slider {
-  margin-bottom: 20px;
-}
-
 #slider .slick-slide {
   height: 320px;
 }
@@ -129,6 +125,10 @@ body {
   font-size: 18px;
 }
 
+.hostsName {
+  margin-top: 10px;
+}
+
 #map {
   height: 200px;
 }
@@ -194,7 +194,7 @@ body {
 }
 
 .eventInfoBox .infoContainer {
-  flex: 2;
+  flex: 3;
 }
 
 .eventSpecificBox {
@@ -346,7 +346,7 @@ body {
 }
 
 .message-button {
-  margin: 10px 10px 0 10px;
+  margin: 0;
 }
 
 .btn-black {
