fixed dashboard styling

--- a/public/css/dashboard/dashboard.css
+++ b/public/css/dashboard/dashboard.css
@@ -24,7 +24,7 @@ body {
 }
 
 .user_info .eventsInfoBox .eventsSpan {
-  margin-left: 3px;
+  margin-right: 3px;
 }
 
 .user_info .personelInfoBox {
