--- a/public/css/dashboard/dashboard.scss
+++ b/public/css/dashboard/dashboard.scss
@@ -20,7 +20,7 @@ body {
     display: flex;
     justify-content: space-around;
     .eventsSpan {
-      margin-left: 3px;
+      margin-right: 3px;
     }
   }
   .personelInfoBox {
