--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
     <header>
       <div class="container-fluid">
         <div class="row">
-          <div class="col-xs-5 col-sm-8">
+          <div class="col-xs-4 col-sm-8">
             <div class="header_img">
               <a href="/"><img src="/assets/whitesalticon.png" alt="salt"></a>
             </div>
@@ -89,12 +89,12 @@
                 </div>
               </div>
               <% if current_user %>
-              <div class="col-xs-7 col-sm-4" id="profile-box" data-id=<%= current_user.id %>>
+              <div class="col-xs-8 col-sm-4" id="profile-box" data-id=<%= current_user.id %>>
                 <div class="header_links">
                   <nav class="nav_effect">
                 <%= link_to "Logout", logout_path, method: 'delete' %>
               <% else %>
-              <div class="col-xs-7 col-sm-4" id="profile-box" data-id="none">
+              <div class="col-xs-8 col-sm-4" id="profile-box" data-id="none">
                 <div class="header_links">
                   <nav class="nav_effect">
                     <a href="#" data-toggle="modal" data-target="#sign_up">Sign Up</a>
@@ -106,15 +106,18 @@
                     <% if current_user %>
                     <a href="#" alt="Profile Image">
                     <% else %>
-                    <a href="#" alt="Profile Image" data-toggle="tooltip" data-placement="bottom" title="Must Be Logged In">
+                    <a href="#" alt="Profile Image"><%= image_tag('/assets/no_pic.png', :class => "img-circle header_profile_image") %>
                     <% end %>
                        <% if current_user&.images&.first  %>
                         <%= image_tag(attachment_url(current_user.images.first, :file, :fill, 300, 300), :class => "img-circle header_profile_image")%>
-                      <% else %>
-                       <%= image_tag('http://unstats.un.org/unsd/trade/events/2015/abudhabi/img/no-pic.png', :class => "img-circle header_profile_image") %>
+                      <% elsif current_user && current_user&.images&.first == nil %>
+                       <%= image_tag('/assets/no_pic.png', :class => "img-circle header_profile_image") %>
+                       <% else %>
+                       <%= image_tag('/assets/no_pic.png', {:class => "img-circle header_profile_image", :data-toggle =>"tooltip", :data-placement => "bottom", :title => "Must Be Logged In"}) %>
                       <% end %>
                     </a>
                     </div>
+                    <% if current_user %>
                     <div id="navDropdownMenu" class="menu" style="display:none">
                       <ul class="navDropdownMenuItems">
                         <a href="/current_user/dashboard"><li>Profile</li></a>
@@ -122,6 +125,7 @@
                         <a href="#"><li>Inbox</li></a>
                       </ul>
                     </div>
+                    <% end %>
                   </div>
                 </div>
               </div>
