fixed styling bugs

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -121,8 +121,8 @@
                     <div id="navDropdownMenu" class="menu" style="display:none">
                       <ul class="navDropdownMenuItems">
                         <a href="/current_user/dashboard"><li>Profile</li></a>
-                        <a href="#"><li>Host</li></a>
-                        <a href="#"><li>Inbox</li></a>
+                        <a href="/current_user/"><li>Host</li></a>
+                        <a href="/current_user/dashboard/inbox"><li>Inbox</li></a>
                       </ul>
                     </div>
                     <% end %>
