--- a/public/css/dashboard/dashboard.scss
+++ b/public/css/dashboard/dashboard.scss
@@ -166,6 +166,7 @@ body {
   padding: 10px;
   border: 1px solid transparent;
   border-radius: 5px;
+  border-top-left-radius: 0;
   background-color: white;
   overflow-y: scroll;
   height: 500px;
@@ -187,6 +188,8 @@ td {
     cursor: pointer;
     color: black;
     font-size: 18px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
   }
   a:hover {
     background-color: inherit;
