--- a/public/css/footer.scss
+++ b/public/css/footer.scss
@@ -41,6 +41,8 @@ footer {
     .social_links {
       font-size: 13px;
       margin-top: 8px;
+      padding: 0;
+      padding-left: 10px;
       a {
           color: white;
       }
