--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -145,10 +145,9 @@
               <a href="https://twitter.com/"><i class="fa fa-twitter" aria-hidden="true"></i></a>
               <a href="https://www.instagram.com/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
               <a href="https://www.linkedin.com/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-              <a href="https://www.snapchat.com/"><i class="fa fa-snapchat" aria-hidden="true"></i></a>
             </div>
             <div class="col-xs-3">
-              <a href="#about.html"><h5 class="text-center">About Salt</h5></a>
+              <a href="#about.html"><h5 class="text-center">About</h5></a>
             </div>
             <div class="col-xs-3">
               <a href="#policies.html"><h5 class="text-center">Policies</h5></a>
