--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -52,6 +52,8 @@ footer .footer_links h5 {
 footer .social_links {
   font-size: 13px;
   margin-top: 8px;
+  padding: 0;
+  padding-left: 10px;
 }
 
 footer .social_links a {
