fixed homepage image

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -47,7 +47,7 @@
       </div>
     </div>
     <div class="col-xs-12 col-sm-4 salt_info text-center">
-      <i class="fa fa-pencil-square-o info_img" aria-hidden="true"></i>
+      <i class="fa fa-pencil-square-o info_img info_img_pencil" aria-hidden="true"></i>
       <h3>Apply</h3>
       <div class="info_text">
          Request a seat at an event and get speedy approval.
