--- a/public/css/dashboard/dashboard.css
+++ b/public/css/dashboard/dashboard.css
@@ -253,8 +253,11 @@ td {
 
 .panel-heading {
   background-color: black !important;
-  color: white !important;
   border-bottom: 0 !important;
+}
+
+.panel-heading a {
+  color: white !important;
 }
 
 .nameHeader {
