--- a/public/css/welcome/index.css
+++ b/public/css/welcome/index.css
@@ -163,6 +163,10 @@ header {
   font-size: 80px;
 }
 
+.info_img_pencil {
+  margin-left: 16px;
+}
+
 .info_text {
   padding: 0 40px;
   font-size: 16px;
