--- a/public/css/welcome/index.scss
+++ b/public/css/welcome/index.scss
@@ -133,6 +133,9 @@ header {
 .info_img {
   font-size: 80px;
 }
+.info_img_pencil {
+  margin-left: 16px;
+}
 .info_text {
   padding: 0 40px;
   font-size: 16px;
