added total vote count

--- a/public/css/dashboard/dashboard.css
+++ b/public/css/dashboard/dashboard.css
@@ -261,7 +261,11 @@ td {
 }
 
 .nameHeader {
-  width: 30%;
+  width: 20%;
+}
+
+.thumbsHeader {
+  width: 15%;
 }
 
 .quantityHeader {
@@ -269,7 +273,7 @@ td {
 }
 
 .messageHeader {
-  width: 45%;
+  width: 40%;
 }
 
 .statusHeader {
