--- a/public/css/dashboard/dashboard.scss
+++ b/public/css/dashboard/dashboard.scss
@@ -224,13 +224,16 @@ td {
   }
 }
 .nameHeader {
-  width: 30%;
+  width: 20%;
+}
+.thumbsHeader {
+  width: 15%;
 }
 .quantityHeader {
   width: 10%;
 }
 .messageHeader {
-  width: 45%;
+  width: 40%;
 }
 .statusHeader {
   width: 15%;
