--- a/app/views/password_recovery_mailer/set_new_password_email.html.erb
+++ b/app/views/password_recovery_mailer/set_new_password_email.html.erb
@@ -2,4 +2,4 @@
 <p>Click <%= link_to 'here', "https://infinite-cove-48463.herokuapp.com/password_recoveries/#{@password_recovery.token}/edit" %> to reset your Salt Password</p>
 <p>Meet Someone Different!</p>
 <p>The Salt Staff</p>
-<img src="/assets/salticon.png" style="width: 50px;"/>
+<img src="https://infinite-cove-48463.herokuapp.com//assets/salticon.png" style="width: 100px;"/>
