--- a/public/css/dashboard/dashboard.scss
+++ b/public/css/dashboard/dashboard.scss
@@ -227,13 +227,16 @@ td {
   width: 20%;
 }
 .thumbsHeader {
-  width: 15%;
+  width: 10%;
+}
+.thumbVotesNumber {
+  margin-left: 2px;
 }
 .quantityHeader {
   width: 10%;
 }
 .messageHeader {
-  width: 40%;
+  width: 45%;
 }
 .statusHeader {
   width: 15%;
