--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -120,7 +120,7 @@
                     <% if current_user %>
                     <div id="navDropdownMenu" class="menu" style="display:none">
                       <ul class="navDropdownMenuItems">
-                        <a href="/current_user/dashboard"><li>Profile</li></a>
+                        <a href="/current_user/dashboard"><li>Dashboard</li></a>
                         <a href="#" data-toggle="modal" data-target="#eventModalHeader"><li>Host</li></a>
                         <a href="/current_user/dashboard/inbox"><li>Inbox</li></a>
                       </ul>
