--- a/public/css/events/show.scss
+++ b/public/css/events/show.scss
@@ -53,7 +53,13 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     flex: 1;
+    .socialMediaShareButtons {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
     h1 {
       margin: 0;
       font-size: 28px;
