fixed domain issues

--- a/app/views/application_status_change_mailer/application_approved_email.html.erb
+++ b/app/views/application_status_change_mailer/application_approved_email.html.erb
@@ -5,4 +5,4 @@
 </p>
 <p>Meet Someone Different!</p>
 <p>The Salt Staff</p>
-<img src="http://salt-up.com/assets/salticon.png" style="width: 100px;"/>
+<img src="http://www.salt-up.com/assets/salticon.png" style="width: 100px;"/>
