--- a/app/views/password_recovery_mailer/set_new_password_email.html.erb
+++ b/app/views/password_recovery_mailer/set_new_password_email.html.erb
@@ -1,5 +1,5 @@
 <h2> Dear <%= @password_recovery.user.first_name %>,</h2>
-<p>Click <%= link_to 'here', "http://salt-up.com/password_recoveries/#{@password_recovery.token}/edit" %> to reset your Salt Password</p>
+<p>Click <%= link_to 'here', "http://www.salt-up.com/password_recoveries/#{@password_recovery.token}/edit" %> to reset your Salt Password</p>
 <p>Meet Someone Different!</p>
 <p>The Salt Staff</p>
-<img src="http://salt-up.com/assets/salticon.png" style="width: 100px;"/>
+<img src="http://www.salt-up.com/assets/salticon.png" style="width: 100px;"/>
