fixed responsive issues

--- a/public/css/dashboard/dashboard.css
+++ b/public/css/dashboard/dashboard.css
@@ -124,6 +124,10 @@ body {
   color: white;
 }
 
+.table td {
+  padding: 4px !important;
+}
+
 .conversationContainer {
   display: flex;
   flex-direction: column;
@@ -199,7 +203,7 @@ body {
   height: 500px;
   border: 1px solid black;
   margin-bottom: 40px;
-  width: 95%;
+  width: 100%;
 }
 
 .scroll_box a {
@@ -301,6 +305,12 @@ td {
 
 .text_input {
   height: 80px;
+}
+
+@media screen and (min-width: 425px) {
+  .table td {
+    padding: 8px !important;
+  }
 }
 
 @media screen and (min-width: 768px) {
