--- a/public/css/events/show.scss
+++ b/public/css/events/show.scss
@@ -59,6 +59,7 @@ body {
       display: flex;
       align-items: center;
       justify-content: space-between;
+      margin-top: 5px;
     }
     h1 {
       margin: 0;
