--- a/public/css/events/show.css
+++ b/public/css/events/show.css
@@ -74,6 +74,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-top: 5px;
 }
 
 .detailsContainer .titleContainer h1 {
