--- a/public/css/header.scss
+++ b/public/css/header.scss
@@ -195,7 +195,7 @@ nav a {
 .navMobileSearchIcon {
   font-size: 24px;
   margin-top: 25px;
-  left: 116px;
+  left: 100px;
   position: absolute;
   z-index: 8;
   a {
@@ -310,7 +310,11 @@ header {
     margin: 0px 8px 5px 10px;
   }
 }
-
+@media screen and (min-width: 350px) {
+  .navMobileSearchIcon {
+    left: 115px
+  }
+}
 @media screen and (min-width: 768px) {
   nav a {
   	margin: 18px 8px;
