--- a/public/css/events/show.scss
+++ b/public/css/events/show.scss
@@ -31,6 +31,7 @@ body {
   width: 100%;
   .hostImg {
     border-radius: 10px;
+    cursor: pointer;
   }
   button {
     background-color: black;
