--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -101,7 +101,7 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h4 class="modal-title" id="myModalLabel">Message Jake</h4>
+          <h4 class="modal-title" id="myModalLabel">Message</h4>
         </div>
         <div class="modal-body">
         <label for="body"></label>
