--- a/public/css/dashboard/dashboard.css
+++ b/public/css/dashboard/dashboard.css
@@ -232,15 +232,16 @@ td {
   margin-top: 10px;
 }
 
-.nav.nav-pills a {
+.nav.nav-pills li a {
   cursor: pointer;
   color: black;
-  font-size: 18px;
+  font-size: 14px;
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
+  padding: 10px 8px;
 }
 
-.nav.nav-pills a:hover {
+.nav.nav-pills li a:hover {
   background-color: inherit;
 }
 
@@ -314,7 +315,7 @@ td {
 }
 
 @media screen and (min-width: 768px) {
-  .nav.nav-pills a {
+  .nav.nav-pills li a {
     font-size: 20px;
   }
   .user_info .profileImageBox {
