--- a/public/css/dashboard/dashboard.scss
+++ b/public/css/dashboard/dashboard.scss
@@ -198,15 +198,18 @@ td {
 }
 .nav.nav-pills {
   margin-top: 10px;
-  a {
-    cursor: pointer;
-    color: black;
-    font-size: 18px;
-    border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0;
-  }
-  a:hover {
-    background-color: inherit;
+  li {
+    a {
+      cursor: pointer;
+      color: black;
+      font-size: 14px;
+      border-bottom-left-radius: 0;
+      border-bottom-right-radius: 0;
+      padding: 10px 8px;
+    }
+    a:hover {
+      background-color: inherit;
+    }
   }
 }
 .user_profile {
@@ -271,8 +274,10 @@ td {
 
 @media screen and (min-width: 768px) {
   .nav.nav-pills {
-    a {
-      font-size: 20px;
+    li {
+      a {
+        font-size: 20px;
+      }
     }
   }
   .user_info {
