--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -164,7 +164,7 @@
 <% content_for :scripts do %>
   <script src="/js/flatpickr.min.js"></script>
   <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
-  <script src="//maps.google.com/maps/api/js?v=3.23&key=AIzaSyCVaNAId-8BJ8S1fgCLBun7MTbHioICoZU"></script>
+  <script src="//maps.google.com/maps/api/js?v=3.23&key=<%= gkey %>"></script>
   <script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
   <script src='//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js' type='text/javascript'></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.15.0/lodash.js"></script>
