--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -262,7 +262,7 @@
                 <input type="text" data-enable-time="true" data-no-calendar="true" value="17:00" class="form-control flatpickr" id="timeHeader" name="time"  />
               </div>
               <div class="form-group">
-                <label for="guest_limit">Number Of Guests</label>
+                <label for="guest_limit">Maximum Guest Limit</label>
                 <input type="text" class="form-control" id="guest_limitHeader" name="guest_limit"  />
               </div>
               <div class="form-group">
@@ -381,6 +381,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="/js/config.js"></script>
+    <script src="/js/configImages.js"></script>
     <script src="/js/flatpickr.min.js"></script>
     <script src="/js/handleerrors.js"></script>
     <script src="/js/signUpLogin.js"></script>
