fixed responsive issues

--- a/public/css/dashboard/dashboard.css
+++ b/public/css/dashboard/dashboard.css
@@ -231,9 +231,10 @@ td {
 .nav.nav-pills a {
   cursor: pointer;
   color: black;
-  font-size: 18px;
+  font-size: 14px;
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
+  padding: 8px 4px;
 }
 
 .nav.nav-pills a:hover {
@@ -310,7 +311,8 @@ td {
 
 @media screen and (min-width: 768px) {
   .nav.nav-pills a {
-    font-size: 20px;
+    padding: 10px 6px;
+    font-size: 18px;
   }
   .user_info .profileImageBox {
     width: 75%;
