--- a/public/css/events/show.css
+++ b/public/css/events/show.css
@@ -80,7 +80,7 @@ body {
 
 .detailsContainer .titleContainer h1 {
   margin: 0;
-  font-size: 28px;
+  font-size: 24px;
 }
 
 .detailsContainer .detailsBottomContainer {
@@ -156,7 +156,7 @@ body {
   width: 100%;
 }
 
-.eventInfoTitle a {
+.eventInfo a {
   color: black;
   font-size: 16px;
 }
@@ -282,7 +282,7 @@ body {
   height: 300px;
 }
 
-.commentsBox .commentsTitle {
+.commentsBox .comments {
   margin: 10px 0;
 }
 
@@ -329,21 +329,18 @@ body {
   color: pink;
 }
 
-@media screen and (min-width: 500px) {
+@media screen and (min-width: 768px) {
   .eventInfoBox, .hostProfileBox, .eventSpecificBox {
     width: 75%;
   }
   .commentsBox, .mapBox, .detailsContainer {
     width: 95%;
   }
-}
-
-@media screen and (min-width: 768px) {
   .detailsContainer {
     flex-direction: row;
   }
   .detailsContainer .titleContainer h1 {
-    font-size: 32px;
+    font-size: 28px;
   }
   .detailsContainer .detailsBottomContainer {
     display: flex;
